--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="line">
-		<div id="rotate"></div>
+	<div id="rotate">
+		<div id="line"></div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
